<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:background="@android:color/white"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_height="200dp"
        android:layout_width="340dp">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="23dp"
            android:text="@string/deleteStoreTitle"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/common_google_signin_btn_text_light_default"
            android:textSize="18dp"
            android:text="@string/deleteStorePopupBody"
            android:layout_marginTop="20dp"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/deleteCancel"
                android:textColor="@color/common_google_signin_btn_text_light_default"
                android:background="@drawable/button_mask" />

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/deleteAccept"
                android:textColor="@color/Red"
                android:background="@drawable/button_mask" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>