<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="?attr/theme_color_L3"
        android:gravity="center_horizontal">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/include_title_dialog" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/stamp_use_blank_backgroud"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_marginTop="5dp">

                    <include
                        android:layout_width="@dimen/stamp_icon_size"
                        android:layout_height="@dimen/stamp_icon_size"
                        layout="@layout/include_stamp"
                        android:layout_weight="0" />
                </RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:text="@string/useStampName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtStampName"
                        android:textColor="?attr/theme_color_D3"
                        android:layout_centerHorizontal="true"
                        android:textSize="22dp" />

                    <TextView
                        android:text="사용기한"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtStampDuration"
                        android:textColor="?attr/theme_color_N"
                        android:layout_below="@+id/txtStampName"
                        android:layout_marginTop="10dp"
                        android:textSize="16dp" />

                    <TextView
                        android:text="2017 / 1 / 1 까지"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewDurationd"
                        android:textColor="@color/gray100"
                        android:layout_below="@+id/txtStampName"
                        android:textSize="16dp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_gravity="center_vertical">

                    <Switch
                        android:layout_height="wrap_content"
                        android:id="@+id/switchLockUnlockCoupon"
                        android:layout_width="wrap_content"
                        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                        android:layout_centerInParent="true" />
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:text="@string/stampNoticeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textColor="@color/gray160"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            android:text="@string/stampWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="?attr/theme_color_D2"
            android:layout_marginTop="10dp" />

        <Button
            android:text="@string/btnUseStamp"
            android:id="@+id/button_use"
            android:background="@color/gray200"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:textColor="@color/White"
            android:layout_width="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

</RelativeLayout>