<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kangjisung.likeroom.FragmentStamp.FragmentStampMain"
    android:background="@color/White"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <!-- TODO: Update blank fragment layout -->
<!--점주앱에서 포인트적립이 메인페이지라면 고객앱에서는 이 페이지가 메인페이지이다.
    적립된 스탬프를 확인할 수 있는 페이지의 디자인이다.
    여기에서 버튼 밑에 viewPager로 스탬프가 들어가야하는데...나에게는 너무나 어렵...-->
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="?attr/theme_color_L3"
        android:layout_alignParentTop="true"
        android:layout_height="90dp"
        android:id="@+id/layout_title">

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/include_rounded_page" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:text="@string/loadingStoreName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtShopName"
                android:textColor="#CC000000"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:textSize="28dp" />

            <TextView
                android:text="@string/loadingStorePhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtShopPhoneNumber"
                android:textColor="?attr/theme_color_D2"
                android:layout_alignParentLeft="true"
                android:textStyle="normal|bold"
                android:textSize="20dp"
                android:layout_alignParentBottom="true" />

            <TextView
                android:text="@string/loadingCustomerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtCustomerName"
                android:layout_weight="1"
                android:textSize="18dp"
                android:layout_gravity="bottom"
                android:gravity="right"
                android:textColor="?attr/theme_color_D3"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_title"
        android:layout_marginTop="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layout_card">

                <ImageView
                    android:layout_width="5dp"
                    app:srcCompat="@color/LightGray"
                    android:id="@+id/imageView13"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="false" />

                <ImageView
                    android:layout_width="match_parent"
                    android:id="@+id/imageView12"
                    android:layout_below="@+id/layout_card"
                    android:background="@color/babypink"
                    android:layout_alignParentBottom="true"
                    android:layout_height="5dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/stamp_box_background">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_height="25dp"
                        android:background="@drawable/shape_circle"
                        android:layout_centerInParent="true"
                        app:backgroundTint="@color/gray240"
                        android:layout_width="200dp" />

                    <Button
                        android:text="이벤트 스탬프 카드 보기"
                        android:layout_width="match_parent"
                        android:id="@+id/btnShowSpecialStamp"
                        android:gravity="center_horizontal"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/button_mask"
                        android:textColor="@color/Black"
                        android:textSize="20dp"
                        android:layout_height="match_parent"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_normal"
                    android:background="@drawable/stamp_box_background"
                    android:layout_marginTop="52dp">

                    <include
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        layout="@layout/include_stamp_card" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_event"
                    android:background="@drawable/stamp_box_background"
                    android:layout_marginTop="52dp"
                    android:visibility="invisible"
                    android:layout_marginBottom="5dp">

                    <include
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        layout="@layout/include_stamp_card"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/layout_card">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/presence_invisible"
                        android:id="@+id/imageView"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true" />

                    <TextView
                        android:text="스탬프 유의사항"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:textColor="@color/clrTextColorMediumDark"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="45dp"
                        android:textSize="18dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/presence_invisible"
                        android:id="@+id/imageView2"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true" />

                    <TextView
                        android:text="스탬프 유의사항"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        android:layout_centerVertical="true"
                        android:textColor="@color/clrTextColorMediumDark"
                        android:textSize="18dp"
                        android:layout_marginLeft="45dp" />
                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
