<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/theme_color_L3"
            android:id="@+id/layout1">

            <ImageView
                android:layout_width="match_parent"
                android:id="@+id/iv_background"
                android:layout_height="100dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <android.support.v7.widget.CardView
                    app:cardCornerRadius="70dp"
                    android:layout_margin="5dp"
                    app:cardPreventCornerOverlap="false"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    app:cardElevation="5dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:id="@+id/iv_image"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="7dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_ripple_circle"
                        android:layout_gravity="center"
                        android:id="@+id/iv_image_change" />

                </android.support.v7.widget.CardView>

                <TextView
                    android:text="매장이름"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/storeName"
                    android:textSize="28dp"
                    android:textColor="?attr/theme_color_D3"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:text="매장구분"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/storeCategory"
                    android:textColor="?attr/theme_color_D2"
                    android:textSize="20dp"
                    android:layout_marginTop="1dp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout2"
            android:layout_below="@+id/layout1"
            android:background="@color/gray245">

            <android.support.v7.widget.CardView
                app:cardPreventCornerOverlap="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ripple_rectangle"
                    android:padding="10dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:background="@mipmap/icon_call"
                        app:backgroundTint="@color/gray100"
                        android:layout_marginStart="3dp" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_centerVertical="true">

                        <TextView
                            android:text="전화번호"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="14dp"
                            android:textColor="?attr/theme_color_N" />

                        <TextView
                            android:text="@string/loadingStorePhoneNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtStorePhone"
                            android:textColor="@color/gray100"
                            android:layout_weight="1"
                            android:textSize="18dp" />
                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:cardPreventCornerOverlap="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card2"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/card1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ripple_rectangle"
                    android:padding="10dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/timeIcon"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_weight="1"
                        android:background="@mipmap/icon_time"
                        app:backgroundTint="@color/gray100"
                        android:layout_marginStart="5dp" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_centerVertical="true">

                        <TextView
                            android:text="오픈 시간"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="14dp"
                            android:textColor="?attr/theme_color_N" />

                        <TextView
                            android:text="@string/loadingStoreOpenAndCloseTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtStoreManageTime"
                            android:textColor="@color/gray100"
                            android:layout_weight="1"
                            android:textSize="18dp" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:cardPreventCornerOverlap="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card3"
                android:layout_below="@+id/card2"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp">

                        <fragment
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/googleMap"
                            class="com.google.android.gms.maps.SupportMapFragment"
                            android:name="com.example.kangjisung.likeroom.FragmentInfo.FragmentInfoMain"
                            android:layout_gravity="center" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_ripple_rectangle"
                            android:id="@+id/btn_google_map" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_ripple_rectangle"
                        android:padding="10dp">

                        <android.support.v7.widget.AppCompatImageView
                            android:id="@+id/mapIcon"
                            android:layout_alignParentLeft="true"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_weight="1"
                            android:background="@mipmap/icon_map"
                            app:backgroundTint="@color/gray100"
                            android:layout_marginStart="3dp" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="40dp"
                            android:layout_centerVertical="true">

                            <TextView
                                android:text="주소"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textSize="14dp"
                                android:textColor="?attr/theme_color_N" />

                            <TextView
                                android:text="@string/loadingStoreAddress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/storeLocation"
                                android:textColor="@color/gray100"
                                android:layout_weight="1"
                                android:textSize="18dp" />

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:cardPreventCornerOverlap="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card4"
                android:layout_below="@+id/card3"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ripple_rectangle">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            app:srcCompat="@mipmap/icon_delete"
                            android:id="@+id/deleteIcon"
                            android:layout_weight="1"
                            android:layout_centerInParent="true"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="5dp" />

                        <TextView
                            android:text="@string/btnDeleteThisStore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gray100"
                            android:layout_weight="1"
                            android:textSize="18dp" />

                    </LinearLayout>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_below="@+id/layout1"
            android:background="@drawable/shape_gradient_border_y"
            android:layout_height="3dp"
            android:rotation="180" />

    </RelativeLayout>

</ScrollView>
